<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/user_role_text"
            style="@style/LargeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/administrator" />

        <androidx.cardview.widget.CardView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/corner_radius">

            <EditText
                android:id="@+id/name_enter_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="15dp"
                android:background="@android:color/transparent"
                android:hint="@string/name"
                android:imeOptions="actionDone"
                android:paddingStart="10dp"
                android:singleLine="true" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="25dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/corner_radius">

            <EditText
                android:id="@+id/surname_enter_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="15dp"
                android:background="@android:color/transparent"
                android:hint="@string/surname"
                android:imeOptions="actionDone"
                android:paddingStart="10dp"
                android:singleLine="true" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="25dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/corner_radius">

            <EditText
                android:id="@+id/email_enter_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="15dp"
                android:background="@android:color/transparent"
                android:hint="Email:"
                android:imeOptions="actionDone"
                android:paddingStart="10dp"
                android:singleLine="true" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/shop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="25dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/corner_radius">

            <Spinner
                android:id="@+id/shop_spinner"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="25dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/corner_radius">

            <EditText
                android:id="@+id/password_enter_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="15dp"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:singleLine="true" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/sign_up"
            style="@style/RedHugeButtonStyle"
            android:layout_marginHorizontal="70dp"
            android:layout_marginTop="50dp"
            android:minHeight="70dp"
            android:text="@string/sing_up" />

        <Button
            android:id="@+id/log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="110dp"
            android:layout_marginTop="5dp"
            android:minHeight="70dp"
            android:text="@string/login_in"
            android:textColor="@color/white"
            app:cornerRadius="@dimen/corner_radius" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>