<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    app:cardBackgroundColor="@color/light_yellow"
    app:cardCornerRadius="@dimen/corner_radius">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/title_div"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            >

            <TextView
                android:id="@+id/titleTextView"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextLarge"
                android:gravity="center"
                android:text="@string/title"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/prizeCardView"
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/corner_radius">

                <EditText
                    android:id="@+id/titleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="15dp"
                    android:singleLine="true"
                    android:background="@android:color/transparent"
                    android:hint="@string/title" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/description_div"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="10dp">


            <TextView
                style="@style/TextLarge"
                android:id="@+id/description_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/description"
                android:layout_weight="1"
                />
            <androidx.cardview.widget.CardView
                android:id="@+id/descriptionCardView"
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/corner_radius">

                <EditText
                    android:id="@+id/descriptionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="15dp"
                    android:singleLine="false"
                    android:background="@android:color/transparent"
                    android:hint="@string/description" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/worker_div"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="10dp">


            <TextView
                style="@style/TextLarge"
                android:id="@+id/worker_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/worker"
                android:layout_weight="1"
                />
            <androidx.cardview.widget.CardView
                android:id="@+id/workerCardView"
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/corner_radius">

                <Spinner
                    android:id="@+id/worker_spinner"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/people_div"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="10dp">


            <TextView
                style="@style/TextLarge"
                android:id="@+id/people_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/count_of_customers"
                android:layout_weight="1"
                />
            <androidx.cardview.widget.CardView
                android:id="@+id/peopleCardView"
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/corner_radius">

                <TextView
                    android:id="@+id/people_text"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_div"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelButton"
                android:text="@string/cancel"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                />

            <Button
                android:id="@+id/deleteButton"
                android:text="@string/delete"
                android:textColor="@color/red"
                android:layout_weight="1"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                />

            <Button
                android:id="@+id/OKButton"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:layout_marginStart="10dp"
                />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>